--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>677</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,19 +15,33 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="1" column="0">
-     <widget class="QLCDNumber" name="lcdJuegosA"/>
+    <item row="2" column="0">
+     <widget class="QLCDNumber" name="lcdJuegosA">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>100</height>
+       </size>
+      </property>
+     </widget>
     </item>
-    <item row="0" column="1">
-     <widget class="QLCDNumber" name="lcdPointsB"/>
-    </item>
-    <item row="1" column="1">
+    <item row="2" column="1">
      <widget class="QLCDNumber" name="lcdJuegosB"/>
     </item>
-    <item row="0" column="0">
-     <widget class="QLCDNumber" name="lcdPointsA"/>
+    <item row="1" column="1">
+     <widget class="QLCDNumber" name="lcdPointsB"/>
     </item>
-    <item row="2" column="0" colspan="2">
+    <item row="1" column="0">
+     <widget class="QLCDNumber" name="lcdPointsA">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>250</height>
+       </size>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0" colspan="2">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <layout class="QVBoxLayout" name="verticalLayout">
@@ -39,15 +53,27 @@
             <height>150</height>
            </size>
           </property>
+          <property name="font">
+           <font>
+            <pointsize>72</pointsize>
+           </font>
+          </property>
           <property name="text">
-           <string>PushButton</string>
+           <string>+</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="pbRestaA">
+          <property name="font">
+           <font>
+            <pointsize>14</pointsize>
+            <weight>75</weight>
+            <bold>true</bold>
+           </font>
+          </property>
           <property name="text">
-           <string>PushButton</string>
+           <string>-</string>
           </property>
          </widget>
         </item>
@@ -56,18 +82,38 @@
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
+         <widget class="QLabel" name="label">
+          <property name="font">
+           <font>
+            <pointsize>28</pointsize>
+            <weight>75</weight>
+            <bold>true</bold>
+           </font>
+          </property>
+          <property name="text">
+           <string>SETS</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <item>
            <widget class="QLabel" name="LabelSetsA">
             <property name="font">
              <font>
-              <pointsize>14</pointsize>
-              <weight>75</weight>
-              <bold>true</bold>
+              <pointsize>48</pointsize>
+              <weight>50</weight>
+              <bold>false</bold>
              </font>
             </property>
             <property name="text">
-             <string/>
+             <string>0</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
             </property>
            </widget>
           </item>
@@ -75,30 +121,20 @@
            <widget class="QLabel" name="LabelSetsB">
             <property name="font">
              <font>
-              <pointsize>14</pointsize>
-              <weight>75</weight>
-              <bold>true</bold>
+              <pointsize>48</pointsize>
+              <weight>50</weight>
+              <bold>false</bold>
              </font>
             </property>
             <property name="text">
-             <string/>
+             <string>0</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
             </property>
            </widget>
           </item>
          </layout>
-        </item>
-        <item>
-         <widget class="QPushButton" name="pushButton_3">
-          <property name="maximumSize">
-           <size>
-            <width>16777215</width>
-            <height>30</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>PushButton</string>
-          </property>
-         </widget>
         </item>
        </layout>
       </item>
@@ -112,21 +148,50 @@
             <height>150</height>
            </size>
           </property>
+          <property name="font">
+           <font>
+            <pointsize>72</pointsize>
+           </font>
+          </property>
           <property name="text">
-           <string>PushButton</string>
+           <string>+</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="pbRestaB">
+          <property name="font">
+           <font>
+            <pointsize>14</pointsize>
+            <weight>75</weight>
+            <bold>true</bold>
+           </font>
+          </property>
           <property name="text">
-           <string>PushButton</string>
+           <string>-</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
      </layout>
+    </item>
+    <item row="0" column="0" colspan="2">
+     <widget class="QLabel" name="leTime">
+      <property name="font">
+       <font>
+        <pointsize>36</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
